# coq-string-of-term

./: .gitignore  CHANGES  LICENSE  README.md  coq-string-of-term.opam  dune-project
src/: dune  g_string_conv.mlg  string_conv.ml  string_of_term.mlpack
theories/: StringOfTerm.v  Test.v  dune
